# Pros_MPC

./: README.md
ocs2_pros/: CMakeLists.txt  package.xml
ocs2_pros/include/pros_controllers/: TargetTrajectoriesPublisher.h
ocs2_pros/launch/: load_controller.launch  world.launch
ocs2_pros/src/: TargetTrajectoriesPublisher.cpp
ocs2_pros/urdf/: a1.urdf  pros.urdf
ocs2_pros_controllers/: CMakeLists.txt  package.xml  pros_controllers_plugins.xml
ocs2_pros_controllers/config/: controllers.yaml  task.info
ocs2_pros_controllers/include/ocs2_pros_controllers/: ProsDummyVisualization.h
ocs2_pros_controllers/launch/: load_controller.launch  load_dummy.launch  visualize.launch
ocs2_pros_controllers/rviz/: mobile_manipulator.rviz
ocs2_pros_controllers/src/: ProsDummyMRT.cpp  ProsDummyVisualization.cpp  ProsMpcNode.cpp  ProsTarget.cpp
ocs2_pros_gazebo/: CMakeLists.txt  package.xml
ocs2_pros_gazebo/launch/: world.launch
ocs2_pros_gazebo/urdf/: pros.urdf
ocs2_pros_interface/: CMakeLists.txt  package.xml
ocs2_pros_interface/auto_generated/pros/dynamics_flow_map/cppad_generated/: dynamics_flow_map_forward_zero.c  dynamics_flow_map_info.c  dynamics_flow_map_jacobian_sparsity.c  dynamics_flow_map_sparse_jacobian.c
ocs2_pros_interface/include/ocs2_pros_interface/: AccessHelperFunctions.h  FactoryFunction.h  ProsInterface.h  ProsModelInfo.h  ProsPinocchioMapping.h  ProsPreComputation.h
ocs2_pros_interface/include/ocs2_pros_interface/constraint/: EndEffectorConstraint_Pros.h  SelfCollisionConstraint_Pros.h
ocs2_pros_interface/include/ocs2_pros_interface/cost/: QuadraticInputCost_Pros.h
ocs2_pros_interface/include/ocs2_pros_interface/dynamics/: DefaultManipulatorDynamics.h  FloatingArmManipulatorDynamics.h  FullyActuatedFloatingArmManipulatorDynamics.h  WheelBasedMobileManipulatorDynamics.h
ocs2_pros_interface/include/ocs2_pros_interface/implementation/: AccessHelperFunctionsImpl.h
ocs2_pros_interface/src/: FactoryFunction.cpp  ProsInterface.cpp  ProsPinocchioMapping.cpp  ProsPreComputation.cpp
ocs2_pros_interface/src/constraint/: EndEffectorConstraint_Pros.cpp
ocs2_pros_interface/src/dynamics/: DefaultManipulatorDynamics.cpp  FloatingArmManipulatorDynamics.cpp  FullyActuatedFloatingArmManipulatorDynamics.cpp  WheelBasedMobileManipulatorDynamics.cpp
ocs2_pros_ros/: CMakeLists.txt  package.xml
